# fipv

./: .buildinfo  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/pages/: overview.doctree  reference.doctree
.github/: dependabot.yml
.github/workflows/: black.yml  pylint.yml  python-package-docs.yml  python-package-publish.yml  python-package-test.yml
_modules/fipv/: fipv.c.html
_modules/include/: split.h.html  types.h.html  utils.h.html  xalloc.h.html
_modules/include/validators/: ipv4.h.html  ipv6.h.html
_sources/pages/: overview.rst.txt
docs/: conf.py  index.rst  requirements.txt
docs/pages/: reference.rst
fipv/: fipv.c
include/: split.h  types.h  utils.h  xalloc.h
include/validators/: ipv4.h  ipv6.h
pages/: overview.html  reference.html
tests/: cases.py  test.py
