[metadata]
name = fipv
version = file: VERSION
keywords = fast, validation, validator, validate, ipv4, ipv6, ipv6_cidr, ipv4_cidr
license = MIT
author = eredotpkfr
author_email = erdoganyoksul3@gmail.com
description = Fast IP validator for bulk IP data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eredotpkfr/fipv
project_urls =
    Bug Reports = https://github.com/eredotpkfr/fipv/issues
    Say Thanks (star the project) = https://github.com/eredotpkfr/fipv
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7s
packages = find:
package_dir =
    = fipv

[options.packages.find]
where = fipv
