[metadata]
name = fipv
version = file: VERSION
keywords = fast, validation, validator, validate, ipv4, ipv6, ipv6_cidr, ipv4_cidr
license = MIT
author = eredotpkfr
author_email = erdoganyoksul3@gmail.com
description = Fast IP validator for bulk IP data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eredotpkfr/fipv
project_urls =
    Documentation = https://www.erdoganyoksul.com/fipv/
    Bug Reports = https://github.com/eredotpkfr/fipv/issues
    Say Thanks (star the project) = https://github.com/eredotpkfr/fipv
classifiers =
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = fipv

[options.packages.find]
where = fipv
